--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -30,5 +30,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: *
+          publish_branch: feat/pipeline
           publish_dir: reports
