--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -2,7 +2,8 @@ name: Pipeline to run load tests
 
 on:
   push:
-    - branch: main
+    branches:
+      - 'main'
   schedule:
     - cron: '30 17 * * 5' # Every thursday at 17:30
 
