--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -35,5 +35,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: main
+          publish_branch: feat/reports
           publish_dir: reports
