--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'main'
   schedule:
-    - cron: '30 17 * * 5' # Every thursday at 17:30
+    - cron: '30 13 * * 4,5' # Every thursday and friday at 13:30 h UTC
 
 permissions:
   contents: write
